# platform.core.messaging.msg-service

./: AUTHORS  CMakeLists.txt  LICENSE.APLv2  LICENSE.Flora  NOTICE  SLP_MessagingFW_PG.h  mms-plugin.manifest  msg-server  msg-service-tools.manifest  msg-service.manifest  msg-service.pc.in  msg-service.rule  msg_service-init-DB.sh  sysinfo-message.xml  version.sh
TC/: _export_env.sh  _export_target_env.sh  build.sh  execute.sh  tet_scen  tetclean.cfg  tslist.txt
config/: .msg_service.db  .msg_service.db-journal  kdb-setting.sh  msg-service-db.CDMA.sql  msg-service-db.sql  msg-service.conf  plugin.cfg  plugin.cfg.in  sysinfo-message.xml
debian/: changelog  control  (+7 more)
framework/: CMakeLists.txt  main.cpp
framework/deliver-handler/: MsgDeliverHandler.cpp
framework/plugin-manager/: MsgPluginConfig.cpp  MsgPluginManager.cpp
framework/setting-handler/: MsgSettingHandler.cpp
framework/storage-handler/: MsgStorageFilter.cpp  MsgStorageFolder.cpp  MsgStorageManager.cpp  MsgStorageMessage.cpp  MsgStorageMms.cpp  MsgStorageSim.cpp  MsgStorageUtil.cpp
framework/submit-handler/: MsgSubmitHandler.cpp
framework/transaction-manager/: MsgCmdHandlerFilter.cpp  MsgCmdHandlerSetting.cpp  MsgCmdHandlerStorage.cpp  MsgCmdHandlerTransport.cpp  MsgTransManager.cpp
manager/: CMakeLists.txt  tizen-manifest.xml
manager/inc/: msg-manager-alarm.h  msg-manager-contact.h  msg-manager-debug.h  msg-manager-notification.h  msg-manager-sound.h  msg-manager-util.h  msg-manager.h
manager/res/: CMakeLists.txt
manager/res/po/: CMakeLists.txt
manager/src/: msg-manager-alarm.cpp  msg-manager-contact.cpp  msg-manager-notification.cpp  msg-manager-sound.cpp  msg-manager-util.cpp  msg-manager.cpp
mapi/: CMakeLists.txt  MapiControl.cpp  MapiMessage.cpp  MapiSetting.cpp  MapiStorage.cpp  MapiTransport.cpp  msg_control.cpp  msg_filter.cpp  msg_message.cpp  msg_mms.cpp  msg_setting.cpp  msg_storage.cpp  msg_svc.cpp  msg_transport.cpp
msg_helper/: CMakeLists.txt  MsgSensorWrapper.cpp  MsgSoundPlayer.cpp  main.cpp
plugin/mms_plugin/: CMakeLists.txt  MmsPluginAppBase.cpp  MmsPluginAvCodec.cpp  MmsPluginCodec.cpp  MmsPluginCodecCommon.cpp  MmsPluginComposer.cpp  MmsPluginConnManWrapper.cpp  MmsPluginContentCodec.cpp  MmsPluginDebug.cpp  MmsPluginDecode.cpp  MmsPluginDrm.cpp  MmsPluginEncode.cpp  MmsPluginEventHandler.cpp  MmsPluginHttp.cpp  MmsPluginInternal.cpp  MmsPluginMIME.cpp  MmsPluginMain.cpp  MmsPluginMessage.cpp  MmsPluginSMILValidate.cpp  MmsPluginSmil.cpp  MmsPluginStorage.cpp  MmsPluginTcs.cpp  MmsPluginTextConvert.cpp  MmsPluginTransport.cpp  MmsPluginUserAgent.cpp  MmsPluginUtil.cpp
plugin/mms_plugin/LanguagePack/: MmsPluginWmLngLatinUni.cpp  MmsPluginWmLngString.cpp  MmsPluginWmLngUTF8Uni.cpp  MmsPluginWmLngUniUTF8.cpp
plugin/mms_plugin/include/: MmsPluginAppBase.h  MmsPluginAvCodec.h  MmsPluginCodec.h  MmsPluginCodecCommon.h  MmsPluginCodecTypes.h  MmsPluginComposer.h  MmsPluginConnManWrapper.h  MmsPluginData.h  MmsPluginDebug.h  MmsPluginDecode.h  MmsPluginDrm.h  MmsPluginEncode.h  MmsPluginEventHandler.h  MmsPluginHttp.h  MmsPluginInternal.h  MmsPluginMIME.h  MmsPluginMain.h  MmsPluginMessage.h  MmsPluginSMILValidate.h  MmsPluginSetup.h  MmsPluginSmil.h  MmsPluginStorage.h  MmsPluginTcs.h  MmsPluginTextConvert.h  MmsPluginTransport.h  MmsPluginTypes.h  MmsPluginUserAgent.h  MmsPluginUtil.h  MmsPluginWmLngPack.h
plugin/sms_cdma_plugin/: CMakeLists.txt  SmsCdmaPluginCallback.cpp  SmsCdmaPluginCodec.cpp  SmsCdmaPluginEventHandler.cpp  SmsCdmaPluginMain.cpp  SmsCdmaPluginParamCodec.cpp  SmsCdmaPluginSetting.cpp  SmsCdmaPluginStorage.cpp  SmsCdmaPluginTransport.cpp  SmsCdmaPluginUAManager.cpp  SmsCdmaPluginWapPushHandler.cpp
plugin/sms_cdma_plugin/include/: SmsCdmaPluginCallback.h  SmsCdmaPluginCodec.h  SmsCdmaPluginEventHandler.h  SmsCdmaPluginMain.h  SmsCdmaPluginParamCodec.h  SmsCdmaPluginSetting.h  SmsCdmaPluginStorage.h  SmsCdmaPluginTransport.h  SmsCdmaPluginTypes.h  SmsCdmaPluginUAManager.h  SmsCdmaPluginWapPushHandler.h
plugin/sms_plugin/: CMakeLists.txt  SmsPluginCallback.cpp  SmsPluginCbMsgHandler.cpp  SmsPluginConcatHandler.cpp  SmsPluginDSHandler.cpp  SmsPluginEventHandler.cpp  SmsPluginMain.cpp  SmsPluginParamCodec.cpp  SmsPluginSatHandler.cpp  SmsPluginSetting.cpp  SmsPluginSimMsg.cpp  SmsPluginStorage.cpp  SmsPluginTextConvert.cpp  SmsPluginTpduCodec.cpp  SmsPluginTransport.cpp  SmsPluginUAManager.cpp  SmsPluginUDCodec.cpp  SmsPluginWapPushHandler.cpp
plugin/sms_plugin/include/: SmsPluginCallback.h  SmsPluginCbMsgHandler.h  SmsPluginConcatHandler.h  SmsPluginDSHandler.h  SmsPluginEventHandler.h  SmsPluginMain.h  SmsPluginParamCodec.h  SmsPluginSatHandler.h  SmsPluginSetting.h  SmsPluginSimMsg.h  SmsPluginStorage.h  SmsPluginTextConvert.h  SmsPluginTpduCodec.h  SmsPluginTransport.h  SmsPluginTypes.h  SmsPluginUAManager.h  SmsPluginUDCodec.h  SmsPluginWapPushHandler.h
proxy/: CMakeLists.txt  MsgHandleControl.cpp  MsgHandleFilter.cpp  MsgHandleSetting.cpp  MsgHandleStorage.cpp  MsgHandleTransport.cpp  MsgProxyContact.cpp  MsgProxyListener.cpp
test_app/: CMakeLists.txt  MsgTestConvert.cpp  MsgTestConvert.h  MsgTestSetting.cpp  MsgTestSetting.h  MsgTestStorage.cpp  MsgTestStorage.h  MsgTestThreadView.cpp  MsgTestThreadView.h  MsgTestTransport.cpp  MsgTestTransport.h  main.cpp  main.h
test_app/mms_files/: A.smi  Temp0_2.txt  Temp1_0.txt  V091120_104905.3gp  audio.amr
utils/: CMakeLists.txt  MsgCallStatusManager.cpp  MsgContact.cpp  MsgDebug.cpp  MsgDrmWrapper.cpp  MsgException.cpp  MsgGconfWrapper.cpp  MsgIpcSocket.cpp  MsgJsonParser.cpp  MsgMemory.cpp  MsgMmsMessage.cpp  MsgMutex.cpp  MsgNotificationWrapper.cpp  MsgSerialize.cpp  MsgSmil.cpp  MsgSoundPlayer.cpp  MsgSpamFilter.cpp  MsgSqliteWrapper.cpp  MsgTextConvert.cpp  MsgUtilFile.cpp  MsgUtilFunction.cpp  MsgUtilMime.cpp  MsgUtilStorage.cpp  MsgVMessage.cpp  MsgZoneManager.cpp
vobject-engine/: CMakeLists.txt  VCard.c  VCardCalUtil.c  VMessage.c
vobject-engine/include/: VCard.h  VMessage.h  VTypes.h  vobject.h
vobject-engine/test_code/: CQ_VCARD.c  uts_vdata_vcard_decode.c  uts_vdata_vcard_encode.c
(+310 files in other folders)
