CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
include(CheckCCompilerFlag)

SET(MSG-MGR-PKGNAME org.tizen.msg-manager)

ADD_DEFINITIONS("-D_FILE_OFFSET_BITS=64")

IF(_WEARABLE_PROFILE)
        ADD_DEFINITIONS("-DMSG_MGR_WEARABLE_PROFILE")
ENDIF(_WEARABLE_PROFILE)

SET(CMAKE_SKIP_BUILD_RPATH TRUE)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall")

SET(MSG-MANAGER-SRCS
        ${CMAKE_CURRENT_SOURCE_DIR}/src/msg-manager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/msg-manager-contact.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/msg-manager-notification.cpp
)

INCLUDE_DIRECTORIES(
		${CMAKE_SOURCE_DIR}/include/mapi
        ${CMAKE_CURRENT_SOURCE_DIR}/inc/
)

INCLUDE(FindPkgConfig)
pkg_check_modules(mgr_pkgs REQUIRED glib-2.0 dlog appcore-agent bundle contacts-service2 capi-appfw-application notification)
INCLUDE_DIRECTORIES(${mgr_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${mgr_pkgs_LIBRARY_DIRS})

FOREACH(flag ${mgr_pkgs_CXXFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS}")
SET(msg_mgr_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIE")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_EXECUTABLE(${MSG-MGR} ${MSG-MANAGER-SRCS})
TARGET_LINK_LIBRARIES(${MSG-MGR} ${mgr_pkgs_LDFLAGS} ${MAPI-LIB})
SET_TARGET_PROPERTIES(${MSG-MGR} PROPERTIES COMPILE_FLAGS "${msg_mgr_CXX_FLAGS}")

INSTALL(TARGETS ${MSG-MGR} DESTINATION ${APP_BINDIR})
INSTALL(FILES tizen-manifest.xml DESTINATION ${APP_MANIFESTDIR} RENAME ${MSG-MGR-PKGNAME}.xml)
